Fixed CSS Footer overlap issues

--- a/public/content/app.css
+++ b/public/content/app.css
@@ -37,29 +37,37 @@
 /* Centered Paragraph */
   .centerp {
     margin: 0;
-    position: absolute;
     padding-top: 20%;
     margin-left: 10%;
     font-size: 16px;
   }
 
-/*Footer Overrides */
+/*Footer/header/navbar Overrides */
+
+    .navbar {
+      background-color: #454545;
+      margin-bottom: 0;
+      border-radius: 0;
+    }
+
+    body {
+    background-color: #dddddd;
+    width: 100%;
+    min-height: 100%;
+    margin-bottom: 150px;
+  }
 
   .footer {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 52px 0px;
-    gap: 28px;
-    position: absolute;
-    bottom: 0;
+    background-color: #454545;
+    position: fixed;
+    bottom: 0%;
     width: 100%;
-    height: 220px;
-    background: #454545;
-    flex: none;
-    order: 1;
-    flex-grow: 0;}
-
+    height: auto;
+    padding: 28px 0px;
+    gap: 28px;
+    z-index: 9999;
+    }
 
   .footerp {
     font-style: normal;
